# todo-list-qt

./: CMakeLists.txt  LICENSE  README.md  main.cpp
backend/database/: database.cpp  database.h
backend/managers/: taskmanager.cpp  taskmanager.h
backend/model/: listModel.cpp  listModel.h
backend/proxyModel/: proxyModel.cpp  proxyModel.h
backend/task/: task.h
frontend/: Main.qml
frontend/components/: TaskInput.qml  Toast.qml
test/: main.cpp
test/database/: databaseTest.cpp  databaseTest.h
test/listModel/: listModelTest.cpp  listModelTest.h
test/manager/: managerTest.cpp  managerTest.h
test/proxyModel/: proxyModelTest.cpp  proxyModelTest.h
